# pypostal

./: .gitignore  .gitmodules  README.md  build.py  install-libpostal.sh  pyproject.toml
.github/workflows/: main.yml
addresses/: dedupe.py  expand.py  near_dupe.py  normalize.py  parser.py  token_types.py  tokenize.py
pylibpostal/: dedupe.py  tokenize.py
tests/: test_expand.py  test_parser.py
