[tool.poetry]
name = "addresses"
version = "0.1.0"
description = "Parse street addresses around the world."
license = "MIT"
authors = ["snapADDY GmbH <info@snapaddy.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
isort = "^5.9.2"
black = "^21.7-beta.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
