[tool.poetry]
name = "pylibpostal"
version = "0.1.0"
description = "Parse street addresses around the world."
license = "MIT"
authors = ["snapADDY GmbH <info@snapaddy.com>"]
readme = "README.md"
build = "build.py"
exclude = ["postal/libpostal"]

[tool.poetry.dependencies]
python = "^3.9"
six = "^1.16.0"

[tool.poetry.dev-dependencies]
isort = "^5.9.2"
black = "^21.7-beta.0"
auditwheel = "^4.0.0"

[tool.isort]
line_length = 88
use_parentheses = true
include_trailing_comma = true
multi_line_output = 3

[build-system]
requires = ["poetry-core", "setuptools"]
build-backend = "poetry.core.masonry.api"
